--- a/styles.css
+++ b/styles.css
@@ -313,10 +313,96 @@ li {
   margin-left: 1px;
 }
 
-.modal-footer {
+/* this is the beggining of button overflow */
+.modal {
+  position:fixed;
+  top: 55%;
+  left: 55%;
+  transform: translate(-50%, -50%) scale(0);
+  transition: 500ms ease-in-out;
+  border: 1px solid black;
+  border-radius: 10px;
+  z-index: 10;
+  background-color: white;
+  /* width: 500px */
+  
+}
+
+.modal.active {
+  transform: translate(-50%, -50%) scale(1);
+}
+
+.modal-header {
+  padding: 10px 15px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  border-bottom: 1px solid black;
+}
+
+.modal-header .close-button {
+  cursor: pointer;
+  border: none;
+  outline: none;
+  background: none;
+  font-size: 2rem;
+  font-weight: bold;
+}
+
+.modal-body {
+  padding: 10px 15px;
+}
+
+#overlay {
+  position: fixed;
+  margin-top: 0px;
+  opacity: 0;
+  transition: ease-in-out 200ms;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: grey;
+  pointer-events: none;
+}
+
+#overlay.active {
+  pointer-events: all;
+  opacity: 1;
+}
+
+.modal-header {
+  display: block;
+  border-bottom: 1px solid gray;
+}
+
+.modal-header-first {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+
+}
+
+.modal-header-links {
+  display: flex;
+  justify-content: space-evenly;
+  width: 50vw;
+  margin-top: 0px;
+  border: 1px solid red;
+  padding: 0px;
+}
+
+.modal-image img{
+  margin-left: 10px;
+  margin-top: 30px;
+  width : 480px
+}
+
+.mobile-header-links {
   display: flex;
   flex-direction: row;
 }
+
 
 @media only screen and (min-width: 1000px) {
   body {
