--- a/styles.css
+++ b/styles.css
@@ -315,7 +315,7 @@ li {
 
 /* this is the beggining of button overflow */
 .modal {
-  position:fixed;
+  position: fixed;
   top: 55%;
   left: 55%;
   transform: translate(-50%, -50%) scale(0);
@@ -324,8 +324,6 @@ li {
   border-radius: 10px;
   z-index: 10;
   background-color: white;
-  /* width: 500px */
-  
 }
 
 .modal.active {
@@ -334,7 +332,8 @@ li {
 
 .modal-header {
   padding: 10px 15px;
-  display: flex;
+  display: ;
+  flex-direction: row;
   justify-content: space-between;
   align-items: center;
   border-bottom: 1px solid black;
@@ -371,16 +370,10 @@ li {
   opacity: 1;
 }
 
-.modal-header {
-  display: block;
-  border-bottom: 1px solid gray;
-}
-
 .modal-header-first {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-
 }
 
 .modal-header-links {
@@ -388,7 +381,6 @@ li {
   justify-content: space-evenly;
   width: 50vw;
   margin-top: 0px;
-  border: 1px solid red;
   padding: 0px;
 }
 
