--- a/styles.css
+++ b/styles.css
@@ -360,7 +360,7 @@ li {
   left: 0;
   right: 0;
   bottom: 0;
-  background-color: grey;
+  background-color:#c1c7d0;
   pointer-events: none;
 }
 
