--- a/styles.css
+++ b/styles.css
@@ -316,7 +316,7 @@ li {
 /* this is the beggining of button overflow */
 .modal {
   position: fixed;
-  top: 55%;
+  top: 42%;
   left: 55%;
   transform: translate(-50%, -50%) scale(0);
   transition: 500ms ease-in-out;
@@ -324,6 +324,8 @@ li {
   border-radius: 10px;
   z-index: 10;
   background-color: white;
+  overflow: scroll;
+  height: fit-content;
 }
 
 .modal.active {
@@ -331,11 +333,20 @@ li {
 }
 
 .modal-header {
-  padding: 10px 15px;
-  flex-direction: row;
+  display: flex;
+  padding: 1px 1px;
+  flex-direction:column;
   justify-content: space-between;
   align-items: center;
   border-bottom: 1px solid black;
+  overflow: scroll;
+}
+
+.modal-header-first {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  width: 50vw;
 }
 
 .modal-header .close-button {
@@ -379,19 +390,34 @@ li {
   display: flex;
   justify-content: space-evenly;
   width: 50vw;
-  margin-top: 1px;
+  margin-top: -40px;
   padding: 1px;
+  margin-bottom: -40px;
 }
 
 .modal-image img {
   margin-left: 10px;
-  margin-top: 30px;
-  width: 480px;
+  margin-top: 0px;
+  width: 410px;
+}
+
+.modal-body {
+  max-height: 480px;
+  overflow: scrol;
 }
 
 .mobile-header-links {
   display: flex;
   flex-direction: row;
+}
+
+.footer-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+  width: 290px;
+  margin-left: 20px;
+
 }
 
 @media only screen and (min-width: 1000px) {
@@ -588,4 +614,14 @@ li {
   .ham {
     display: none;
   }
+
+  .modal {
+    max-height: 80vh;
+    overflow: scroll;
+  }
+
+  .modal-image img{
+    width: 50vw;
+  }
+  
 }
