--- a/styles.css
+++ b/styles.css
@@ -295,15 +295,10 @@ li {
 .contact-input {
   margin-bottom: 10px;
   padding: 10px;
-  width: 90%;
 }
 
 .lang-arrow {
   display: flex;
-}
-
-.inter-font {
-  margin-left: 90px;
 }
 
 .la {
@@ -316,6 +311,101 @@ li {
   list-style: none;
   padding-left: 1px;
   margin-left: 1px;
+}
+
+/* this is the beggining of button overflow */
+.modal {
+  position: fixed;
+  top: 42%;
+  left: 55%;
+  transform: translate(-50%, -50%) scale(0);
+  transition: 500ms ease-in-out;
+  border: 1px solid black;
+  border-radius: 10px;
+  z-index: 10;
+  background-color: white;
+  overflow: scroll;
+}
+
+.modal.active {
+  transform: translate(-50%, -50%) scale(1);
+}
+
+.modal-header {
+  display: flex;
+  padding: 1px 1px;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  border-bottom: 1px solid black;
+  overflow: hidden;
+}
+
+.modal-header-first {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  width: 50vw;
+}
+
+.modal-header .close-button {
+  cursor: pointer;
+  border: none;
+  outline: none;
+  background: none;
+  font-size: 2rem;
+  font-weight: bold;
+}
+
+.modal-body {
+  padding: 10px 15px;
+  max-height: 480px;
+}
+
+#overlay {
+  position: fixed;
+  margin-top: 1px;
+  opacity: 0;
+  transition: ease-in-out 200ms;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #c1c7d0;
+  pointer-events: none;
+}
+
+#overlay.active {
+  pointer-events: all;
+  opacity: 1;
+}
+
+.modal-header-links {
+  display: flex;
+  justify-content: space-evenly;
+  width: 50vw;
+  margin-top: -40px;
+  padding: 1px;
+  margin-bottom: -40px;
+}
+
+.modal-image img {
+  margin-left: 10px;
+  margin-top: 10px;
+  width: 410px;
+}
+
+.mobile-header-links {
+  display: flex;
+  flex-direction: row;
+}
+
+.footer-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+  width: 390px;
+  margin-left: 20px;
 }
 
 @media only screen and (min-width: 1000px) {
@@ -511,5 +601,14 @@ li {
 
   .ham {
     display: none;
+  }
+
+  .modal {
+    max-height: 80vh;
+    overflow: scroll;
+  }
+
+  .modal-image img {
+    width: 50vw;
   }
 }
