--- a/styles.css
+++ b/styles.css
@@ -408,6 +408,13 @@ li {
   margin-left: 20px;
 }
 
+.inner-font {
+  background-color: white;
+  color: red;
+  margin-left: 90px;
+  border-radius: 0.3rem;
+  font-weight: 600;
+}
 @media only screen and (min-width: 1000px) {
   body {
     padding: 1px;
