--- a/styles.css
+++ b/styles.css
@@ -624,11 +624,44 @@ li {
     display: none;
   }
 
-  .modal {
-    max-height: 80vh;
+  .modal.active{
+    width: 1006px;
+    height: 872px;
+  }
+
+  .modal-header-links{
+    display: flex;
+    align-items: flex-start;
+    position: relative;
+    left: -340px;
   }
 
   .modal-image img {
-    
+    width: 988px;
+    height: 536px;
+    border-radius: 8px;
+  }
+
+  .modal-container {
+    display: grid;
+    grid-template-columns: 70% 30%;
+  }
+
+  .modal-para {
+    position: static;
+  width: 100%;
+  height: 220px;
+  left: 0px;
+  font-size: 15px;
+  line-height: 24px;
+  margin: 12px 0px;
+  }
+
+  .footer-container{
+    position: relative;
+    top: -20px;
+    gap: 1px;
+    display: flex;
+    justify-content: left;
   }
 }
